--- a/.travis.yml
+++ b/.travis.yml
@@ -5,14 +5,21 @@ matrix:
     - os: linux
       addons:
         apt:
-          sources: ['ubuntu-toolchain-r-test']
-          packages: ['g++-4.9']
-      env: COMPILER=g++-4.9
+          sources:
+            - ubuntu-toolchain-r-test'
+          packages:
+            - g++-4.9'
+      env:
+        - MATRIX_EVAL="CC=gcc-4.9 && CXX=g++-4.9" 
     - os: osx
-      compiler: clang
-      env: COMPILER=clang++
+      osx_image: xcode8
+      env:
+        - MATRIX_EVAL="CC=gcc-4.9 && CXX=g++-4.9"
 
 script:
     - mkdir build && cd build
     - cmake .. 
     - make
+
+before_install:
+  - eval "${MATRIX_EVAL}"
