--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,9 @@ matrix:
       addons:
         apt:
           sources:
-            - ubuntu-toolchain-r-test'
+            - ubuntu-toolchain-r-test
           packages:
-            - g++-4.9'
+            - g++-4.9
       env:
         - MATRIX_EVAL="CC=gcc-4.9 && CXX=g++-4.9" 
     - os: osx
