--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -2,10 +2,18 @@ set( SOURCES
     ${CMAKE_SOURCE_DIR}/source/Cluster.cpp
     ${CMAKE_SOURCE_DIR}/source/ArgsParser.cpp
     ${CMAKE_SOURCE_DIR}/source/ArgsParser.hpp
+    ${CMAKE_SOURCE_DIR}/source/InputReader.cpp
+    ${CMAKE_SOURCE_DIR}/source/InputReader.hpp
+    ${CMAKE_SOURCE_DIR}/source/Misc.hpp
+    ${CMAKE_SOURCE_DIR}/source/OutputWriter.cpp
+    ${CMAKE_SOURCE_DIR}/source/OutputWriter.hpp
+    ${CMAKE_SOURCE_DIR}/source/VariantDetect.cpp
+    ${CMAKE_SOURCE_DIR}/source/VariantDetect.hpp
     )
 
 include_directories( "${CMAKE_SOURCE_DIR}/external/args" )
 include_directories( "${CMAKE_SOURCE_DIR}/external/bamtools/src" )
+include_directories( "${CMAKE_SOURCE_DIR}/external/transwarp/src" )
 
 add_executable( indel ${SOURCES} )
 target_link_libraries( indel Threads::Threads )
