--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,11 +1,11 @@
 set( SOURCES 
-    ${CMAKE_SOURCE_DIR}/test/ArgsParser.cpp
-    ${CMAKE_SOURCE_DIR}/source/ArgsParser.cpp
-    ${CMAKE_SOURCE_DIR}/source/ArgsParser.hpp
+    ${CMAKE_SOURCE_DIR}/test/Parser.cpp
+    ${CMAKE_SOURCE_DIR}/source/Parser.cpp
+    ${CMAKE_SOURCE_DIR}/source/Parser.hpp
     )
 
 include_directories( "${CMAKE_SOURCE_DIR}/source" )
 include_directories( "${CMAKE_SOURCE_DIR}/external/args" )
 
-add_executable( TestArgsParser ${SOURCES} )
-add_test( NAME ArgsParser COMMAND TestArgsParser )
+add_executable( TestParser ${SOURCES} )
+add_test( NAME Parser COMMAND TestParser )
