--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,7 @@ set( THREADS_PREFER_PTHREAD_FLAG ON )
 find_package( Threads REQUIRED )
 
 add_subdirectory( "${CMAKE_SOURCE_DIR}/external/bamtools" )
+add_subdirectory( "${CMAKE_SOURCE_DIR}/scripts" )
 add_subdirectory( "${CMAKE_SOURCE_DIR}/source" )
 
 enable_testing()
