--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
-cmake_minimum_required( VERSION 3.1 FATAL_ERROR )
+cmake_minimum_required( VERSION 3.0 FATAL_ERROR )
 
-project( indel LANGUAGES CXX )
+project( HyINDEL LANGUAGES CXX )
 
 set( CMAKE_CXX_STANDARD 11 )
 set( CMAKE_CXX_STANDARD_REQUIRED ON )
@@ -11,6 +11,3 @@ find_package( Threads REQUIRED )
 add_subdirectory( "${CMAKE_SOURCE_DIR}/external/bamtools" )
 add_subdirectory( "${CMAKE_SOURCE_DIR}/scripts" )
 add_subdirectory( "${CMAKE_SOURCE_DIR}/source" )
-
-enable_testing()
-add_subdirectory( "${CMAKE_SOURCE_DIR}/test" )
